[package]
name = "pcie-tlp"
version = "0.1.0"
authors = ["Qiu Wenbo <qiuwenbo@kylinos.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
pci = { path = "../pci" }
vm-device = { path = "../vm-device" }
vm-allocator = { path = "../vm-allocator" }
vm-memory = "0.5.0"
crossbeam-channel = "0.5"
log = "0.4"

[dev-dependencies]
kvm-ioctls = "*"
libc = "*"
kvm-bindings = "*"